Continued working on web pages. Give the possibility to "Feirante" change the info of his / her "Stands". Not tested yet.

--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FormProdutoComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FormProdutoComponent.razor
@@ -23,6 +23,11 @@
 	<label><b>Preco</b></label>
 	<input type="text" class="tb" id="email" name="email" placeholder="Preço produto" @bind-value="preco" />
 </div>
+@if(page == 1)
+{
+	<label><b>Categoria</b></label>
+	<input type="text" class="tb" id="categoria" name="categoria" placeholder="Nome categoria" @bind-value="categoria" />
+}
 <div>
 	<button class="buttonA" @onclick="AdicionarProduto">Adicionar Produto</button>
 	<button class="buttonA" @onclick="Retroceder">Retroceder</button>
@@ -32,6 +37,10 @@
 
 @code 
 {
+	[Parameter, EditorRequired]
+	public int page { get; set; }
+	[Parameter, EditorRequired]
+	public int stand { get; set; }
 	private float imposto = 0;
 	private int erro = 0;
 	private bool sucess = false;
@@ -39,14 +48,31 @@
 	private string produto = "";
 	private int quantidade = 0;
 	private float preco = 0f;
-	private Dictionary<int, string> codigosErro = new Dictionary<int, string>();	
+	private string categoria = "";
+	private Dictionary<int, string> codigosErro = new Dictionary<int, string>();
+	private SistemaFeiras facade = SistemaFeiras.GetInstance();
 	public void AdicionarProduto()
 	{
-		FormStandComponent.GetInstance().AdicionaProduto(new Produto(0, produto, 0, 0, quantidade, preco, true));
-		FormStandComponent.GetInstance().GetBack();
+		if (page == 0)
+		{
+			FormStandComponent.GetInstance().AdicionaProduto(new Produto(0, produto, 0, 0, quantidade, preco, true));
+			FormStandComponent.GetInstance().GetBack();
+		}
+		else
+		{
+			facade.AddProduto(new Produto(0, produto, 0, stand, quantidade, preco, true), categoria);
+			ShowStandComponent.GetInstance().ShowStand("Produto Adicionado");
+		}
 	}
 	public void Retroceder()
 	{
-		FormStandComponent.GetInstance().GetBack();
+		if (page == 0)
+		{
+			FormStandComponent.GetInstance().GetBack();
+		}
+		else
+		{
+			ShowStandComponent.GetInstance().ShowStand(3);
+		}
 	}
 }
