--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/ShowStandComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/ShowStandComponent.razor
@@ -209,6 +209,7 @@ else
 
 	public void ShowStand(string message)
 	{
+		InitializedTable();
 		this.erro = 0;
 		sucess = true;
 		sucessMessage = message;
