--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FormProdutoComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FormProdutoComponent.razor
@@ -60,7 +60,7 @@
 		}
 		else
 		{
-			facade.AddProduto(new Produto(0, produto, 0, stand, quantidade, preco, true), categoria);
+			facade.AddProduto(new Produto(0, produto, 0, stand, quantidade, preco, true), imposto);
 			ShowStandComponent.GetInstance().ShowStand("Produto Adicionado");
 		}
 	}
