--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesNegociation/NegociationComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesNegociation/NegociationComponent.razor
@@ -1,6 +1,7 @@
 ﻿@page "/negociation"
 @using SourceCode.Vendas;
 @using SourceCode.Stands;
+@using SourceCode.Utilizadores;
 @using SourceCode.WebClasses;
 @using SourceCode;
 @using FeirasEspinhoBlazorApp.Pages.PagesStand;
@@ -17,28 +18,30 @@ else
 	<div>
 		<div>	
 			<label><b>Email Cliente</b></label>
-			<input type="text" class="tb tb_smaller" id="emailCL" name="emailCL" @bind-value="@venda.EmailCliente" readonly="readonly" />
+			<input type="text" class="tb" id="emailCL" name="emailCL" @bind-value="@venda.EmailCliente" readonly="readonly" />
 			<br />
 			<label><b>Email Feirante</b></label>
-			<input type="text" class="tb tb_smaller" id="emailFeirante" name="emailFeirante" @bind-value="@stand.EmailDono" readonly="readonly" />
+			<input type="text" class="tb" id="emailFeirante" name="emailFeirante" @bind-value="@stand.EmailDono" readonly="readonly" />
 			<br />
 			<label><b>Stand</b></label>
-			<input type="text" class="tb tb_smaller" id="idStand" name="idStand" @bind-value="@venda.IdStand" readonly="readonly" />
+			<input type="text" class="tb" id="idStand" name="idStand" @bind-value="@venda.IdStand" readonly="readonly" />
 		</div>
-		<br />
 		<br />
 		<div>
 			<label><b>Preço Base</b></label>
-			<input type="text" class="tb tb_smaller" id="precoTotal" name="precoTotal" @bind-value="@negociacao.PrecoBase" readonly="readonly" />
+			<input type="text" class="tb" id="precoTotal" name="precoTotal" @bind-value="@negociacao.PrecoBase" readonly="readonly" />
 			<br />
 			<label><b>Preço Proposto</b></label>
-			<input type="text" class="tb tb_smaller" id="precoTotal" name="precoTotal" @bind-value="@negociacao.PrecoNegociacao" readonly="readonly" />
+			<input type="text" class="tb" id="precoTotal" name="precoTotal" @bind-value="@negociacao.PrecoNegociacao" readonly="readonly" />
 		</div>
 		<br />
 		<div>
-			<button class="buttonA buttonTable1" @onclick="Aceitar">Aceitar</button>
-			<button class="buttonA buttonTable1" @onclick="Recusar">Recusar</button>
-			<button class="buttonA buttonTable2" @onclick="Negociar">Negociar</button>
+			@if(alterar)
+			{
+				<button class="buttonA buttonTable1" @onclick="Aceitar">Aceitar</button>
+				<button class="buttonA buttonTable1" @onclick="Recusar">Recusar</button>
+				<button class="buttonA buttonTable2" @onclick="Negociar">Negociar</button>
+			}
 			<button class="buttonA buttonTable2" @onclick="Voltar">Voltar</button>
 		</div>
 	</div>
@@ -47,7 +50,10 @@ else
 {
 	[Parameter, EditorRequired]
 	public int idVenda { get; set; }
+	[Parameter, EditorRequired]
+	public string email { get; set; }
 	private bool negociar = false;
+	private bool alterar = false;
 	private Venda venda;
 	private Negociacao negociacao;
 	private Stand stand;
@@ -60,7 +66,11 @@ else
 		venda = sistema.GetVenda(idVenda);
 		if(venda.Negociacao.HasValue)
 		{
-			negociacao = sistema.GetNegociacao((int) venda.Negociacao);
+			Utilizador user = sistema.GetUtilizador(email);
+			negociacao = sistema.GetNegociacao((int)venda.Negociacao);
+			alterar = negociacao.Resposta;
+			if (user is Feirante)
+				alterar = !alterar;
 		}
 		stand = sistema.GetStand(venda.IdStand);
 	}
@@ -71,10 +81,12 @@ else
 	private void Aceitar()
 	{
 		SistemaFeiras.GetInstance().RegistaSucesso(negociacao.IdNegociacao);
+		Voltar();
 	}
 	private void Recusar()
 	{
-		SistemaFeiras.GetInstance().RegistaInsucesso(negociacao.IdNegociacao);
+		SistemaFeiras.GetInstance().RegistaInsucesso(negociacao.IdNegociacao); 
+		Voltar();
 	}
 	private void Negociar()
 	{
