--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/FormLeilaoComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/FormLeilaoComponent.razor
@@ -6,7 +6,7 @@
 @using FeirasEspinhoBlazorApp.Pages.PagesFeira;
 
 <div>
-	<h3>Criar Leilão</h3>
+	<h2>Formulário Leilão</h2>
 	<div>
 		<label><b>Quantidade a leiloar</b></label>
 		<input type="text" class="tb" id="quantidade" name="quantidade" placeholder="Insira a quantidade a vender" @bind-value="quantidade" />
