--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FormStandComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FormStandComponent.razor
@@ -13,7 +13,7 @@ else
 {
 	<PageTitle>Criar Stand</PageTitle>
 	<div>
-		<h3>Criar Stand</h3>
+		<h2>Formulário Stand</h2>
 		@if(erro != 0)
 		{
 			<WarningComponent mensagem="@codigosErro[erro]" sucess="false" page="2" />
