--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/ShowStandComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/ShowStandComponent.razor
@@ -209,7 +209,7 @@ else
 		@if(type)
 		{
 			ShowFeiraStandsComponent showFeirasStandsComponent = ShowFeiraStandsComponent.GetInstace();
-			showFeirasStandsComponent.GetBack();
+			showFeirasStandsComponent.Avalia();
 		}
 		else
 		{
