--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/EvaluationComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/EvaluationComponent.razor
@@ -1,6 +1,14 @@
-﻿
-<div class="popup">
-	<h2 style="text-align: center">@avaliacaoStr</h2>
+﻿@page "/evaluation/"
+@using SourceCode.WebClasses;
+@using SourceCode.Vendas;
+@using SourceCode.Stands;
+@using SourceCode.Utilizadores;
+@using SourceCode;
+@using FeirasEspinhoBlazorApp.Pages.PagesFeira;
+
+<PageTitle>Avaliar</PageTitle>
+<div>
+	<h2>@name</h2>
 	<br />
 	<div>
 		<input type="radio" name="nota1" value="nota1" @onclick="() => Avalia(1)" checked=@(avaliacao == 1) /><b> Nota 1</b>
@@ -13,15 +21,57 @@
 		<br />
 		<input type="radio" name="nota5" value="nota5" @onclick="() => Avalia(5)" checked=@(avaliacao == 5) /><b> Nota 5</b>
 	</div>
+	<br />
+	<div>
+		<button class="buttonA buttonTable1" @onclick="Confirmar">Confirmar</button>
+		<button class="buttonA" @onclick="Passar">Não Avaliar</button>
+	</div>
 </div>
 @code 
 {
 	[Parameter, EditorRequired]
-	public string avaliacaoStr { get; set; }
-	private int avaliacao;
-
+	public int avaliar { get; set; }
+	[Parameter, EditorRequired]
+	public int idFeira { get; set; }
+	[Parameter, EditorRequired]
+	public string feirante { get; set; }
+	[Parameter, EditorRequired]
+	public string email { get; set; }
+	private String name = "Que nota gostaria de dar ";
+	private int avaliacao = -1;
+	private Dictionary<int, string> codigosErros = new();
+	protected override async void OnInitialized()
+	{
+		if (avaliar == 0)
+			name += "à feira: " + SistemaFeiras.GetInstance().GetFeira(idFeira).Nome + "?";
+		else
+			name += "ao feirante: " + SistemaFeiras.GetInstance().GetUtilizador(feirante).Username + "?";
+		codigosErros[1] = "Nenhuma Avaliação selecionada";
+	}
 	public void Avalia(int avaliacao)
 	{
 		this.avaliacao = avaliacao;
+	}
+	public void Confirmar()
+	{
+		if(avaliacao != -1)
+		{
+			if (avaliar == 0)
+				SistemaFeiras.GetInstance().AddAvaliacaoFeira(email,idFeira,avaliacao);
+			else
+				SistemaFeiras.GetInstance().AddAvaliacaoFeirante(email, feirante, avaliacao);
+			Passar();
+		}
+	}
+	public void Passar()
+	{
+		if (avaliar == 0)
+		{
+			ShowFeirasComponent.GetInstace().GetBack();
+		}
+		else
+		{
+			ShowFeiraStandsComponent.GetInstace().GetBack();
+		}
 	}
 }
